# semantic-segmentation-clothes

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.dvc/: config
classes/: clothes_dataset.py  clothes_model.py  models.py  segmentation_transform.py  utils.py
